--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
 </head>
 <body>
   <main>
-    <h1 id="challenge"></h1>
+    <h1>Improv Challenge</h1>
+    <h2>Un défi d’impro solo à chaque clic</h2>
+
+    <p id="challenge"></p>
     <button id="refresh">Nouveau défi</button>
   </main>
+
   <script src="script.js"></script>
 </body>
 </html>
