--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <h1>Improv Challenge</h1>
     <h2>Un défi d’impro solo à chaque clic</h2>
 
+    <div id="lang-select">
+      <button data-lang="fr">FR</button>
+      <button data-lang="en">EN</button>
+    </div>
+
     <p id="challenge"></p>
     <button id="refresh">Nouveau défi</button>
   </main>
