--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 <body>
   <main>
     <h1>Improv Challenge</h1>
-    <h2>Un défi d’impro solo à chaque clic</h2>
+    <h2>Un excercice d’impro solo à chaque clic</h2>
 
-    <div id="lang-select">
-      <button data-lang="fr">FR</button>
-      <button data-lang="en">EN</button>
-    </div>
+ <div id="lang-select">
+  <span class="lang-label">Langue :</span>
+  <button data-lang="fr" class="active">FR</button>
+  <button data-lang="en">EN</button>
+</div>
 
     <p id="challenge"></p>
     <button id="refresh">Nouveau défi</button>
