--- a/index.html
+++ b/index.html
@@ -5,21 +5,27 @@
   <title>Improv Challenge</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+
   <main>
     <h1>Improv Challenge</h1>
-    <h2>Un excercice d’impro solo à chaque clic</h2>
-
- <div id="lang-select">
-  <span class="lang-label">Langue :</span>
-  <button data-lang="fr" class="active">FR</button>
-  <button data-lang="en">EN</button>
-</div>
+    <h2>Un exercice d’impro solo à chaque clic</h2>
 
     <p id="challenge"></p>
     <button id="refresh">Nouveau défi</button>
   </main>
 
+  <!-- Sélecteur de langue en bas de page -->
+  <footer id="lang-footer">
+    <div id="lang-select">
+      <span class="lang-label">Langue :</span>
+      <button data-lang="fr" class="active">FR</button>
+      <button data-lang="en">EN</button>
+    </div>
+  </footer>
+
   <script src="script.js"></script>
 </body>
 </html>
+
