--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
     <p id="challenge"></p>
     <button id="refresh">Nouveau défi</button>
   </main>
+<div id="references-toggle">Références</div>
+
+<section id="references">
+  <h3>Sources & inspirations</h3>
+  <ul>
+    <li>Katy Schutte – https://www.katyschutte.co.uk/</li>
+    <li>Jill Bernard – https://payhip.com/JillBernardImprov</li>
+    <li>Site web : can‑i‑get‑a.com</li>
+  </ul>
+</section>
 
   <!-- Sélecteur de langue en bas de page -->
   <footer id="lang-footer">
