--- a/index.html
+++ b/index.html
@@ -2,31 +2,30 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Improv Challenge</title>
+  <title>Solo Improv Games </title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
   <main>
-    <h1>Improv Challenge</h1>
+    <h1>Let's Play!</h1>
     <h2>Un exercice d’impro solo à chaque clic</h2>
 
     <p id="challenge"></p>
     <button id="refresh">Nouveau défi</button>
+
+    <div id="references-toggle">Références</div>
+
+    <section id="references">
+      <h3>Sources & inspirations</h3>
+      <ul>
+        <li>Katy Schutte – https://www.katyschutte.co.uk/</li>
+        <li>Jill Bernard – https://payhip.com/JillBernardImprov</li>
+        <li>Site web : can‑i‑get‑a.com</li>
+      </ul>
+    </section>
   </main>
-<div id="references-toggle">Références</div>
 
-<section id="references">
-  <h3>Sources & inspirations</h3>
-  <ul>
-    <li>Katy Schutte – https://www.katyschutte.co.uk/</li>
-    <li>Jill Bernard – https://payhip.com/JillBernardImprov</li>
-    <li>Site web : can‑i‑get‑a.com</li>
-  </ul>
-</section>
-
-  <!-- Sélecteur de langue en bas de page -->
   <footer id="lang-footer">
     <div id="lang-select">
       <span class="lang-label">Langue :</span>
@@ -38,4 +37,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
