--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <p id="challenge"></p>
     <button id="refresh">Nouveau défi</button>
 
-    <div id="references-toggle">Références</div>
+    <div id="references-toggle">Sources & inspirations</div>
 
     <section id="references">
-      <h3>Sources & inspirations</h3>
+      <h3>Teachers, Books and Worshops that have inspired content in this generator. </h3>
       <ul>
         <li>Katy Schutte – https://www.katyschutte.co.uk/</li>
         <li>Jill Bernard – https://payhip.com/JillBernardImprov</li>
