--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <p id="challenge"></p>
     <button id="refresh">Nouveau défi</button>
 
-    <div id="references-toggle">Sources & inspirations</div>
+    <div id="references-toggle" class="icon-button">
+  ℹ️ <span>Sources & inspirations</span>
+</div>
 
     <section id="references">
       <h3>Teachers, Books and Worshops that have inspired content in this generator. </h3>
