--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <p id="challenge"></p>
     <button id="refresh">Nouveau défi</button>
 
-    <div id="references-toggle" class="icon-button">
-  ℹ️ <span>Sources & inspirations</span>
+   <div id="references-toggle" class="ref-toggle">
+  <span class="ref-label">Sources & inspirations</span>
+  <span class="ref-arrow">▼</span>
 </div>
 
     <section id="references">
