--- a/index.html
+++ b/index.html
@@ -36,6 +36,19 @@
       <button data-lang="en">EN</button>
     </div>
   </footer>
+<div id="contact-toggle" class="ref-toggle">
+  <span class="ref-label">Contact me</span>
+  <span class="ref-arrow">▼</span>
+</div>
+
+<div id="contact-section">
+  <form action="https://usebasin.com/f/e7aa36586754" method="POST" class="contact-form">
+    <label for="message">Message :</label>
+    <textarea id="message" name="message" required></textarea>
+
+    <button type="submit">Envoyer</button>
+  </form>
+</div>
 
   <script src="script.js"></script>
 </body>
