--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Solo Improv Games </title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Solo Improv Games</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -14,19 +15,32 @@
     <p id="challenge"></p>
     <button id="refresh">Nouveau défi</button>
 
-   <div id="references-toggle" class="ref-toggle">
-  <span class="ref-label">Sources & inspirations</span>
-  <span class="ref-arrow">▼</span>
-</div>
+    <div id="references-toggle" class="ref-toggle">
+      <span class="ref-label">Sources & inspirations</span>
+      <span class="ref-arrow">▼</span>
+    </div>
 
     <section id="references">
-      <h3>Teachers, Books and Worshops that have inspired content in this generator. </h3>
+      <h3>Teachers, Books and Workshops that have inspired content in this generator.</h3>
       <ul>
-        <li>Katy Schutte – https://www.katyschutte.co.uk/</li>
-        <li>Jill Bernard – https://payhip.com/JillBernardImprov</li>
-        <li>Site web : can‑i‑get‑a.com</li>
+        <li><a href="https://www.katyschutte.co.uk/" target="_blank">Katy Schutte</a></li>
+        <li><a href="https://payhip.com/JillBernardImprov" target="_blank">Jill Bernard</a></li>
+        <li><a href="https://www.can-i-get-a.com" target="_blank">can‑i‑get‑a.com</a></li>
       </ul>
     </section>
+
+    <div id="contact-toggle" class="ref-toggle">
+      <span class="ref-label">Contact me</span>
+      <span class="ref-arrow">▼</span>
+    </div>
+
+    <div id="contact-section">
+      <form action="https://usebasin.com/f/e7aa36586754" method="POST" class="contact-form">
+        <label for="message">Message :</label>
+        <textarea id="message" name="message" required></textarea>
+        <button type="submit">Envoyer</button>
+      </form>
+    </div>
   </main>
 
   <footer id="lang-footer">
@@ -36,19 +50,6 @@
       <button data-lang="en">EN</button>
     </div>
   </footer>
-<div id="contact-toggle" class="ref-toggle">
-  <span class="ref-label">Contact me</span>
-  <span class="ref-arrow">▼</span>
-</div>
-
-<div id="contact-section">
-  <form action="https://usebasin.com/f/e7aa36586754" method="POST" class="contact-form">
-    <label for="message">Message :</label>
-    <textarea id="message" name="message" required></textarea>
-
-    <button type="submit">Envoyer</button>
-  </form>
-</div>
 
   <script src="script.js"></script>
 </body>
