--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <h3>Teachers, Books and Workshops that have inspired content in this generator.</h3>
       <ul>
         <li><a href="https://www.katyschutte.co.uk/" target="_blank">Katy Schutte</a></li>
+        <li><a href="https://www.vinnyfrancois.com/" target="_blank">Vinny François</a></li>
         <li><a href="https://payhip.com/JillBernardImprov" target="_blank">Jill Bernard</a></li>
         <li><a href="https://www.can-i-get-a.com" target="_blank">can‑i‑get‑a.com</a></li>
       </ul>
