--- a/index.html
+++ b/index.html
@@ -36,11 +36,21 @@
     </div>
 
     <div id="contact-section">
-      <form action="https://usebasin.com/f/e7aa36586754" method="POST" class="contact-form">
-        <label for="message">Message :</label>
-        <textarea id="message" name="message" required></textarea>
-        <button type="submit">Envoyer</button>
-      </form>
+<form action="https://usebasin.com/f/e7aa36586754" method="POST" class="contact-form">
+
+  <label for="name">Nom :</label>
+  <input type="text" id="name" name="name" required>
+
+  <label for="email">Courriel :</label>
+  <input type="email" id="email" name="email" required>
+
+  <label for="message">Message :</label>
+  <textarea id="message" name="message" required></textarea>
+
+  <button type="submit">Envoyer</button>
+
+</form>
+
     </div>
   </main>
 
