--- a/index.html
+++ b/index.html
@@ -15,25 +15,20 @@
     <p id="challenge"></p>
     <button id="refresh">Nouveau défi</button>
 
-    <div id="references-toggle" class="ref-toggle">
-      <span class="ref-label">Sources & inspirations</span>
-      <span class="ref-arrow">▼</span>
-    </div>
+<div id="references-toggle" class="toggle">
+  <span>Sources & inspirations</span>
+  <span class="arrow">▼</span>
+</div>
 
-    <section id="references">
-      <h3>Teachers, Books and Workshops that have inspired content in this generator.</h3>
-      <ul>
-        <li><a href="https://www.katyschutte.co.uk/" target="_blank">Katy Schutte</a></li>
-        <li><a href="https://www.vinnyfrancois.com/" target="_blank">Vinny François</a></li>
-        <li><a href="https://payhip.com/JillBernardImprov" target="_blank">Jill Bernard</a></li>
-        <li><a href="https://www.can-i-get-a.com" target="_blank">can‑i‑get‑a.com</a></li>
-      </ul>
-    </section>
+<section id="references" style="display:none;">
+  <div id="references-list"></div>
+</section>
 
-    <div id="contact-toggle" class="ref-toggle">
-      <span class="ref-label">Contact me</span>
-      <span class="ref-arrow">▼</span>
-    </div>
+
+   <div id="contact-toggle" class="toggle">
+  <span>Contact me</span>
+  <span class="arrow">▼</span>
+</div>
 
     <div id="contact-section">
 <form action="https://usebasin.com/f/e7aa36586754" method="POST" class="contact-form">
