--- a/index.html
+++ b/index.html
@@ -25,8 +25,32 @@
   <div id="references-list"></div>
 </section>
 
+<div id="mindset-toggle" class="toggle">
+  <span>Mindset & Objectifs</span>
+  <span class="arrow">▼</span>
+</div>
+
+<section id="mindset-section" style="display:none;">
+  <div id="mindset-content">
+    <p>Qu'est-ce que cette page ?</p>
+    <ul>
+      <li>Un outil conçu pour permettre un entraînement quotidien, simple, même sans partenaire.</li>
+      <li>Projet bilingue, extensible à d’autres langues si des nouveaux collaborateurs sont intéressés à traduire le contenu et assurer la maintenance.</li>
+      <li>Ceci n’est pas une banque d’exercices générés par IA : chaque ajout doit refléter une expérience humaine</li>
+      <li>Les références ne sont pas liées à un exercice précis : une version courte peut dénaturer l’exercice original et il existe probablement plusieurs variations dans le monde.  C’est surtout une manière de rendre hommage aux enseignements qui nous ont influencés et d’aider les utilisateurs à découvrir les sources originales.  </li>
+   </ul>
+      <p>What is this page ?</p>
+    <ul>
+      <li>This is a tool designed for easy daily training, even without a partner.</li>
+      <li>Bilingual project, expandable to more languages if new collaborators are interested to translate the content and maintain it.</li>
+      <li>This is not an AI‑generated exercise bank: each contribution should reflect human experience.</li>
+      <li>References aren’t tied to specific exercises; a shortened version might often distort the original exercise. The goal is mainly honor the teachers and sources that shaped us and help users discover the original training materials. </li>
+    </ul>
+  </div>
+</section>
+    
    <div id="contact-toggle" class="toggle">
-  <span>Contact me</span>
+  <span>Contact: Questions, Comments and Suggestions</span>
   <span class="arrow">▼</span>
 </div>
 
