--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div id="container">
   <main>
     <h1>Let's Play!</h1>
-    <h2>Un exercice d’impro solo à chaque clic</h2>
+    <h2>Un exercice d’impro solo à chaque clic.</h2>
 
     <p id="challenge"></p>
     <button id="refresh">Nouveau défi</button>
@@ -32,14 +32,15 @@
 
 <section id="mindset-section" style="display:none;">
   <div id="mindset-content">
-    <p>Qu'est-ce que cette page ?</p>
+
+    <p class="mindset-title">Qu'est-ce que cette page ?</p>
     <ul>
       <li>Un outil conçu pour permettre un entraînement quotidien, simple, même sans partenaire.</li>
       <li>Projet bilingue, extensible à d’autres langues si des nouveaux collaborateurs sont intéressés à traduire le contenu et assurer la maintenance.</li>
       <li>Ceci n’est pas une banque d’exercices générés par IA : chaque ajout doit refléter une expérience humaine</li>
       <li>Les références ne sont pas liées à un exercice précis : une version courte peut dénaturer l’exercice original et il existe probablement plusieurs variations dans le monde.  C’est surtout une manière de rendre hommage aux enseignements qui nous ont influencés et d’aider les utilisateurs à découvrir les sources originales.  </li>
    </ul>
-      <p>What is this page ?</p>
+       <p class="mindset-title">What is this page ?</p>
     <ul>
       <li>This is a tool designed for easy daily training, even without a partner.</li>
       <li>Bilingual project, expandable to more languages if new collaborators are interested to translate the content and maintain it.</li>
